Deployment fix: Robust CORS origin parsing with trimming