@@ -14,7 +14,9 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Configuration
 @EnableWebSecurity
@@ -39,8 +41,15 @@ public class SecurityConfig {
         CorsConfiguration config = new CorsConfiguration();
         
         // Split comma-separated string from properties
-        List<String> origins = List.of(allowedOrigins.split(","));
-        config.setAllowedOrigins(origins);
+        if (allowedOrigins != null && !allowedOrigins.isEmpty()) {
+            List<String> origins = Arrays.stream(allowedOrigins.split(","))
+                                         .map(String::trim)
+                                         .filter(s -> !s.isEmpty())
+                                         .collect(Collectors.toList());
+            config.setAllowedOrigins(origins);
+        } else {
+            config.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
+        }
         
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         config.setAllowedHeaders(List.of("*"));
